--- a/conf/web.xml
+++ b/conf/web.xml
@@ -28,14 +28,34 @@
       <servlet-class>kz.edu.sdu.buben.j2ee.app.mom.servlets.ListAccountsServlet</servlet-class>
     </servlet>
 
+    <servlet>
+      <servlet-name>CallSessionServlet</servlet-name>
+      <servlet-class>kz.edu.sdu.buben.j2ee.app.mom.servlets.CallSessionServlet</servlet-class>
+    </servlet>
+
+    <servlet>
+      <servlet-name>BalanceServlet</servlet-name>
+      <servlet-class>kz.edu.sdu.buben.j2ee.app.mom.servlets.BalanceServlet</servlet-class>
+    </servlet>
+
     <servlet-mapping>
-      <servlet-name>SimpleServlet</servlet-name>
-      <url-pattern>/*</url-pattern>
+      <servlet-name>CallSessionServlet</servlet-name>
+      <url-pattern>/call/*</url-pattern>
+    </servlet-mapping>
+
+    <servlet-mapping>
+      <servlet-name>BalanceServlet</servlet-name>
+      <url-pattern>/balance/*</url-pattern>
     </servlet-mapping>
 
     <servlet-mapping>
       <servlet-name>ListAccountsServlet</servlet-name>
       <url-pattern>/list/*</url-pattern>
+    </servlet-mapping>
+
+    <servlet-mapping>
+      <servlet-name>SimpleServlet</servlet-name>
+      <url-pattern>/*</url-pattern>
     </servlet-mapping>
 
 
