--- a/build.xml
+++ b/build.xml
@@ -11,7 +11,7 @@
   <property name="build.war" location="build_war"/>
   <property name="build.sar" location="build_sar"/>
   <property name="dist"  location="dist"/>
-  <property name="jboss510" location="/opt/jboss-5.1.0.GA"/>
+  <property name="jboss510" location="/home/german/distr/jboss-5.1.0.GA"/>
   <property name="project.name" value="mom" />
   <property name="project.version" value="0.0.1" />
   <property name="company.name" value="buben.kz" />
@@ -37,6 +37,7 @@
 			<include name="bips_base_utils.jar"/>
 			<include name="xpp3_min-1.1.4c.jar"/>
 			<include name="xstream-1.3.1.jar"/>
+			<include name="refresher-1.1.0.jar"/>
 			<include name="${vaadin.jar}"/>
 		</fileset>
 		<fileset dir="${jboss510}/common/lib/" id="common.lib">
@@ -110,6 +111,7 @@
   	   <fileset dir="${web.dir}" includes="**"/>
   	   <classes  dir="${build.war}" includes="**"/>
        <lib dir="${conf}/lib" >
+       	<include name="refresher-1.1.0.jar" />
           <include name="${vaadin.jar}" />
        </lib>
   	 </war>
